veskim-sfdx/force-app/main/default/objects/Lead/fields/City_District__c.field-meta.xml
<CustomField>
    <fullName>City_District__c</fullName>
    <description>City/District location information for region assignment. Complies with Logo address hierarchy.</description>
    <label>City / District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>