veskim-sfdx/force-app/main/default/objects/Lead/fields/Interest_Area__c.field-meta.xml
<CustomField>
    <fullName>Interest_Area__c</fullName>
    <description>Lead's area of interest or request type.</description>
    <label>Interest Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>