veskim-sfdx/force-app/main/default/objects/Lead/fields/Product_Group_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Interest__c</fullName>
    <description>Product group the lead is interested in (if applicable).</description>
    <label>Product Group Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main Chemical</fullName>
            </value>
            <value>
                <fullName>Auxiliary Chemical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>