veskim-sfdx/force-app/main/default/objects/Lead/fields/Related_Department__c.field-meta.xml
<CustomField>
    <fullName>Related_Department__c</fullName>
    <description>The department the interaction was conducted with (Purchasing, IT, Logistics, etc.).</description>
    <label>Related Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>