veskim-sfdx/force-app/main/default/objects/Lead/fields/Veskim_Department__c.field-meta.xml
<CustomField>
    <fullName>Veskim_Department__c</fullName>
    <description>Which Veskim business unit this lead is related to (Main Chemical / Auxiliary Chemical).</description>
    <label>Veskim Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Chemical</fullName>
            </value>
            <value>
                <fullName>Auxiliary Chemical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>